# green-team

./: .gitignore  README.md  build_docker.py  deploy_docker.py  docker_deploy.py  dockerfile  release_docker.py  requirements.txt  requirements_internal.txt  start_docker.py
apiservice/: .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
apiservice/apiservice/: main.py
apiservice/apiservice/api/: accounts.py  authentication.py  html_pages.py
apiservice/apiservice/data/: operations.py
apiservice/apiservice/models/: accounts.py  authentication.py  common.py
apiservice/apiservice/sample_data/: summary1.txt  text1.txt  timeline.json  title1.txt
apiservice/apiservice/static/: scripts.js
apiservice/apiservice/templates/: login.html  profile.html  register.html  users.html
apiservice/apiservice/utils/: background_couroutines.py  secrets.py
apiservice/tests/: build_db.py
app/: __init__.py  ffmpeg_transcoder.py  job_worker.py  main.py  openai_prompter.py  patient_story_prompter.py  test.py  test_full.py  test_service.py  whisper_transcriber.py  youtube_downloader.py
open_whipsper/: instuctions.txt
scraper/: config.cfg  context_tiktok.py  convert.py  download_tiktok.py  extract_summary_chatgpt.py  extract_summary_distilbart.py  extract_symptoms_chatgpt.py  extract_timeline_chatgpt.py  scrape.py  scrape_selenium.py  scrape_tiktokpy.py  scraper_youtube_pytube.py  sele.py  settings.toml  summarize.py  tab_manager_tiktok.py  timeline.json  timeline.py  transcribe.py
super-patient-app/: package-lock.json  package.json
(+11 files in other folders)
